@@ -1,3 +1,8 @@
+Wed Feb 24 17:47:28 1999  Jim Wilson  <wilson@cygnus.com>
+
+	* dwarf2out.c (add_location_or_const_value_attribute):  Add big
+	endian correction for parms passed in regs but living on the stack.
+
 Wed Feb 24 14:03:54 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* calls.c (compute_argument_block_size): New function, extracted from
